Fix HTML formatting and update image paths

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="logo">
             <a href="home.html">
-                <img src="C:\Users\allav\OneDrive\Documents\Desktop\SUMA\Ammu.jpg" alt="image">
+                <img src="Ammu.jpg" alt="image">
             </a>
         </div>
             <ul>
@@ -67,4 +67,5 @@
     </div>
 </footer>
 </body>
+
 </html>
