Fix image path and clean up HTML structure

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="logo">
             <a href="home.html">
-                <img src="C:\Users\allav\OneDrive\Documents\Desktop\SUMA\Ammu.jpg" alt="image">
+                <img src="Ammu.jpg" alt="image">
             </a>
         </div>
         <ul>
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
