Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="c:\Users\allav\OneDrive\Documents\Desktop\SUMA\ammu1.jpg" alt="Suma Bindhu" height="250" width="250" >
+            <img src="Ammu.jpg" alt="Suma Bindhu" height="250" width="250" >
         </div>
     </section>
     <section class="highlights">
@@ -69,4 +69,5 @@
 </body>
 
 </html>
+
 
