--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="logo">
             <a href="home.html">
-                <img src="Ammu.jpg" alt="image">
+                <img src="ammu1.jpg" alt="image">
             </a>
         </div>
             <ul>
@@ -69,5 +69,6 @@
 </body>
 
 </html>
+
 
 
