--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </a>
         </div>
             <ul>
-                <li><a href="home.html" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -69,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
