Fix image source path in about.html
Updated image source path for profile picture.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <p>Hello! I'm <strong>Suma Bindhu</strong>, a passionate web developer and designer. I enjoy building modern and responsive websites that provide a great user experience. My goal is to turn ideas into functional, visually appealing projects while constantly learning new technologies.</p>
             </div>
             <div class="image">
-                <img src="c:\Users\allav\OneDrive\Documents\Desktop\SUMA\ammu1.jpg" alt="Suma Bindhu">
+                <img src="ammu1.jpg" alt="Suma Bindhu">
             </div>
         </section>
     </main>
@@ -40,3 +40,4 @@
     </div></footer>
 </body>
 </html>
+
