--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             </a>
         </div>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -86,4 +86,5 @@
 
 </body>
 </html>
+
 
