--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="photo">My Portfolio</div>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -40,4 +40,5 @@
     </div></footer>
 </body>
 </html>
+
 
