--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="logo">My Portfolio</div>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="projects.html" class="active">Projects</a></li>
@@ -73,5 +73,6 @@
 
 </body>
 </html>
+
 
 
