--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="photo">My Portfolio</div>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html" class="active">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -89,3 +89,4 @@
 
 </body>
 </html>
+
