--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,10 @@
     <nav>
         <div class="logo">
             <a href="home.html">
-                <img src="C:\Users\allav\OneDrive\Documents\Desktop\SUMA\Ammu.jpg" alt="image">
+                <img src="Ammu.jpg" alt="Profile Image">
             </a>
         </div>
+
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -45,29 +46,14 @@
                 <button type="submit">Send Message</button>
             </form>
 
-            <!-- My Details -->
+            <!-- Contact Details -->
             <div class="contact-details">
                 <h2>My Details</h2>
 
-                <p>
-                    <i class="fas fa-user"></i>
-                    <span>Suma Bindhu</span>
-                </p>
-
-                <p>
-                    <i class="fas fa-envelope"></i>
-                    <span>sumabindhu@email.com</span>
-                </p>
-
-                <p>
-                    <i class="fas fa-phone"></i>
-                    <span>+91 9XXXXXXXXX</span>
-                </p>
-
-                <p>
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>Andhra Pradesh, India</span>
-                </p>
+                <p><i class="fas fa-user"></i> Suma Bindhu</p>
+                <p><i class="fas fa-envelope"></i> sumabindhu@email.com</p>
+                <p><i class="fas fa-phone"></i> +91 9XXXXXXXXX</p>
+                <p><i class="fas fa-map-marker-alt"></i> Andhra Pradesh, India</p>
 
                 <div class="social-links">
                     <a href="#"><i class="fab fa-linkedin"></i></a>
