--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="Ammu.jpg" alt="Suma Bindhu" height="250" width="250" >
+            <img src="ammu1.jpg" alt="Suma Bindhu" height="250" width="250" >
         </div>
     </section>
     <section class="highlights">
@@ -69,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
