--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
             <!-- Project 1 -->
             <div class="project-card">
-                <img src="C:\Users\allav\OneDrive\Pictures\Screenshots\Screenshot 2025-12-24 133456.png" alt="Portfolio Website">
+                <img src="Gemini_Generated_Image_eewizreewizreewi.png" alt="Portfolio Website">
                 <h3>Portfolio Website</h3>
                 <p>
                     Designed a personal responsive portfolio using HTML and CSS
@@ -73,6 +73,7 @@
 
 </body>
 </html>
+
 
 
 
