--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 
             <!-- Project 2 -->
             <div class="project-card">
-                <img src="C:\Users\allav\OneDrive\Documents\Desktop\SUMA\BMI Calculator.webp" alt="Calculator Project">
+                <img src="Gemini_Generated_Image_ubwl4oubwl4oubwl.png" alt="Calculator Project">
                 <h3>Calculator Web Page</h3>
                 <p>
                     Created a simple calculator UI using HTML and CSS
@@ -73,6 +73,7 @@
 
 </body>
 </html>
+
 
 
 
