--- a/projects.html
+++ b/projects.html
@@ -53,9 +53,9 @@
                 </p>
             </div>
 
-            <!-- Project 4 -->
+            <!-- Project 3-->
             <div class="project-card">
-                <img src="C:\Users\allav\OneDrive\Documents\Desktop\SUMA\hover-zoom-effect.jpg" alt="Hover Effects">
+                <img src="Gemini_Generated_Image_f7p6wof7p6wof7p6.png" alt="Hover Effects">
                 <h3>Image Hover Effects</h3>
                 <p>
                     Implemented image zoom and hover effects using pure CSS
@@ -73,6 +73,7 @@
 
 </body>
 </html>
+
 
 
 
