--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p></p>
             <div class="cta-buttons">
                 <a href="projects.html" class="btn primary">View My Work</a>
-                <a href="SUMA BINDHU ALLAVARAPU.pdf" class="btn primary">Resume</a>
+                <a href="Suma Bindhu resumee.pdf.pdf" class="btn primary">Resume</a>
             </div>
         </div>
         <div class="image">
@@ -69,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
