--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         </div>
 
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -72,3 +72,4 @@
 
 </body>
 </html>
+
